--- a/estate/package.json
+++ b/estate/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.3.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
