--- a/estate/package.json
+++ b/estate/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "firebase": "^11.0.2",
     "gsap": "^3.12.5",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
